--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2529,107 +2529,108 @@ stories:
   domain: http://www.advertiserplymouthoh.com/
   link: http://advertiserplymouthoh.com/index.php/2015/02/12/know-the-disadvantages-of-being-a-journalist/
 images:
-- name: aws-s3-stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
-- name: containership-containership-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
-- name: aws-s3-stories-berlin-wall-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-berlin-wall-graham-sutherland.jpg
-- name: razorcliff-razorcliff-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-kand-two.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-- name: docks-docks-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
-- name: downtown-los-angeles-downtown-la-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-wols.JPG
-- name: curtain-curtain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dali-three.jpg
-- name: statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-- name: aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
-- name: paris-paris-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-diego-rivera1.jpg
-- name: death-valley-death-valley-national-park-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-satan-red.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
-- name: blossombar-crafty-painting-file-00-00-50-52.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-52.jpg
-- name: hollywood-building-hollywood-building-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-missle.jpg
-- name: curtain-curtain-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-plentiful.jpg
-- name: stories-supreme-court-judgement.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-supreme-court-judgement.jpg
-- name: old-door-lock-old-door-lock-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-umberto-bocc.jpg
-- name: hollywood-building-hollywood-building-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-three.jpg
-- name: old-cabin-oldcabin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-graham-sutherland.jpg
-- name: old-door-lock-old-door-lock-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-light-dali.jpg
-- name: gears-4882162452-fa3126b38d-b-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-green-zuma.jpg
-- name: aws-s3-bluelake-bluelake-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still.jpg
-- name: oldroad-old-road-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dali-three.jpg
-- name: carry-load-carryload-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-electricity.jpg
-- name: ellis-island-ellis-island-room-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-purple-storm.jpg
-- name: status-berlin-status-berlin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-internet-numbers.jpg
-- name: oldsmallboat-oldsmallboat-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-far-away.jpg
-- name: machine-road-machine-road-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-matrix.jpg
-- name: stories-new-42-16-600-400-0-max-1-1-1-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-400-0-max-1-1-1-5.jpg
-- name: supreme-court-supremecourt-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-bright-sand.jpg
-- name: old-house-oldhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-oily-mcoilface.jpg
-- name: berlinwall2-berlinwall-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-rain.jpg
-- name: flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-- name: ellis-island-ellisisland-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-light-dali.jpg
-- name: liberty-back-statue-liberty-back-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kand-two.jpg
-- name: dc-statue-dcstatue-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
-- name: server-cloud-server-racks-door-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-emily-carr.jpg
-- name: old-cabin-oldcabin-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-yellow-paper.jpg
-- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
-- name: yosemite-yosemite-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sand-paper.jpg
-- name: oldtrain-oldtrain-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-atari-missle.jpg
-- name: oldcabin-oldcabin-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-cinnamon-rolls.jpg
-- name: san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-- name: walled-garden-walled-garden-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dali-three.jpg
-- name: server-cloud-server-racks-door-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-brush.jpg
-- name: downtheline-downtheline-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-cinnamon-rolls.jpg
-- name: catacombs-catacombs-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colored-circuits.jpg
-- name: birdhouse-birdhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-soul.jpg
-- name: catacombs-catacombs-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-oily-mcoilface.jpg
-- name: mistywoods-babyfoot-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-emily-carr.jpg
+- name: white-house-whitehouse-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-satan-red.jpg
+- name: supreme-court-supremecourt-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-cinnamon-rolls.jpg
+- name: mediterranean-mediterranean-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-post-modern.jpg
+- name: birdhouse-birdhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
+- name: server-racks-door-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-dark-dali.jpg
+- name: stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+- name: oldhouse-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-neo-instinct.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
+- name: sand-hand-sand-hand-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
+- name: supreme-court-supremecourt-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-dream.jpg
+- name: udnie-DSC_0264.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0264.jpg
+- name: aws-s3-stories-new-dragon-shadows-black-white-outline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-dragon-shadows-black-white-outline.jpg
+- name: liberty-back-statue-liberty-back-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-diego-rivera1.jpg
+- name: oldtrain-oldtrain-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-circuit.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
+- name: mediterranean-mediterranean-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-spagetti-accident.jpg
+- name: old-door-lock-old-door-lock-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-diego-rivera1.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-aqua.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dali-two.jpg
+- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
+- name: christianity-christianity-under-construction-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smoking-cigarette.jpg
+- name: powerlines-power-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-bright-sand.jpg
+- name: ellis-island-ellis-island-room-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
+- name: blossombar-rainbow-festival-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-24-99.jpg
+- name: mistywoods-babyfoot-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-oily-mcoilface.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
+- name: machine-road-machine-road-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crabapple.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
+- name: mediterranean-mediterranean-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-circuit.jpg
+- name: abandonedbuildings_alien_goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_alien_goggles.jpg
+- name: meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
+- name: file-00-00-18-35 3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35
+    3.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+- name: old-church-oldchurch-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-creativity.jpg
+- name: old-barn-old-barn-1500-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-oily-mcoilface.jpg
+- name: downtown-los-angeles-downtown-la-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-green-zuma.JPG
+- name: sand-hand-sand-hand-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-bright-sand.jpg
+- name: scream-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
+- name: machine-road-machine-road-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-brush.jpg
+- name: stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-dali-three.jpg
+- name: death-valley-death-valley-national-park-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-neo-instinct.jpg
+- name: mosaic-face-mosaic-face-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-constitution.jpg
+- name: dragon-desert-desert-dragon-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-far-away.jpg
+- name: old-granary-field-oldhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-dresden.jpg
+- name: fence-mexico-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colored-circuits.jpg
+- name: containership-containership-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-nazi-poster.jpg
+- name: trucksilo-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
+- name: art-museum-art-museum-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colored-circuits.jpg
+- name: aws-s3-stories-server-cloud1-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-internet-numbers.jpg
 ---
 Helping Those Who Care.&nbsp;Perfect Night For A Party.&nbsp;Legislation Introduced To Establish Memorial For Journalists Killed On The Job.&nbsp;Program Connects Leaders Who May Not Have Crossed Paths.&nbsp;Turkmen President Celebrates Birthday With New Gas Refinery.&nbsp;Trump Questioned About His 'meddling' Joke To Putin.&nbsp;Dutch Farm Floats Possibilities Of Urban Dairy Production.&nbsp;Growth Tops Concerns In Latest Treasure Valley Survey.&nbsp;
